# contester

./: .gitignore  .gitmodules  check_solution.php  compose.yaml  composer.json  docker-compose.yml  index.php  profile.php  register.php  save_challenge.php  sign_in.php  solved_challenges.php  view_challenge.php
.github/workflows/: build-runner.yml
app/: check_solution.php  database.php  index.php  profile.php  save_challenge.php  save_profile.php  solved_challenges.php  status.php  view_challenge.php
app/css/: challenges.css  general.css  profile.css  solved_challenges.css  view_challenge.css
app/js/: edit_challenge.js
css/: general.css
js/: auth.js  send_solution.js
nginx/: default.conf
php/: Containerfile  Dockerfile
runner/: CMakeLists.txt  Containerfile  Dockerfile
runner/src/: main.cpp
